 * Upgrade jackson to 2.15.3 and snakeyaml to 2.1 (CASSANDRA-18875)
 * Transactional Cluster Metadata [CEP-21] (CASSANDRA-18330)
 * Add ELAPSED command to cqlsh (CASSANDRA-18861)
 * Add the ability to disable bulk loading of SSTables (CASSANDRA-18781)
 * Clean up obsolete functions and simplify cql_version handling in cqlsh (CASSANDRA-18787)
Merged from 5.0:
 * Fix VectorMemoryIndex#update logic to compare vectors. Fix Index view (CASSANDRA-19168)
 * Deprecate native_transport_port_ssl (CASSANDRA-19392)
 * Update packaging shell includes (CASSANDRA-19283)
 * Fix data corruption in VectorCodec when using heap buffers (CASSANDRA-19167)
 * Avoid over-skipping of key iterators from static column indexes during mixed intersections (CASSANDRA-19278)
 * Make concurrent_index_builders configurable at runtime (CASSANDRA-19266)
 * Fix storage_compatibility_mode for streaming (CASSANDRA-19126)
 * Add support of vector type to cqlsh COPY command (CASSANDRA-19118)
 * Make CQLSSTableWriter to support building of SAI indexes (CASSANDRA-18714)
 * Append additional JVM options when using JDK17+ (CASSANDRA-19001)
 * Upgrade Python driver to 3.29.0 (CASSANDRA-19245)
 * Creating a SASI index after creating an SAI index does not break secondary index queries (CASSANDRA-18939)
 * Optionally fail when a non-partition-restricted query is issued against an index (CASSANDRA-18796)
 * Add a startup check to fail startup when using invalid configuration with certain Kernel and FS type (CASSANDRA-19196)
 * UCS min_sstable_size should not be lower than target_sstable_size lower bound (CASSANDRA-19112)
 * Fix the correspondingMessagingVersion of SSTable format and improve TTL overflow tests coverage (CASSANDRA-19197)
 * Fix resource cleanup after SAI query timeouts (CASSANDRA-19177)
 * Suppress CVE-2023-6481 (CASSANDRA-19184)
Merged from 4.1:
 * Fix StackOverflowError on ALTER after many previous schema changes (CASSANDRA-19166)
 * Memoize Cassandra verion (CASSANDRA-18902)
Merged from 4.0: